--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 // sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.3.31'
+        kotlin_version = '1.3.30'
         dagger_version = '2.22.1'
         aakit_version = '7c550e9a94'
     }
@@ -12,7 +12,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
@@ -69,7 +69,9 @@ dependencies {
     implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
     implementation 'org.whispersystems:signal-protocol-java:2.6.2'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation "com.wefika:flowlayout:0.4.1"
+    implementation("com.wefika:flowlayout:0.4.1") {
+        exclude group: 'com.intellij', module: 'annotations'
+    }
     implementation 'net.ypresto.androidtranscoder:android-transcoder:0.3.0'
     implementation project(':libs:xmpp-addr')
     implementation 'org.osmdroid:osmdroid-android:6.0.3'
@@ -84,7 +86,9 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
-    implementation "com.github.yaneq6:aakit:$aakit_version"
+    implementation("com.github.yaneq6:aakit:$aakit_version") {
+        exclude group: 'com.intellij', module: 'annotations'
+    }
 }
 
 ext {
@@ -96,7 +100,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 323
         versionName "2.4.3"
@@ -118,8 +122,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
     }
 
     flavorDimensions("mode", "distribution", "emoji")
