--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,32 @@
 // Top-level build file where you can add configuration options common to all
 // sub-projects/modules.
 buildscript {
+    ext {
+        kotlin_version = '1.3.31'
+        dagger_version = '2.22.1'
+        aakit_version = '7c550e9a94'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 repositories {
     google()
     jcenter()
     mavenCentral()
+    maven { url "https://kotlin.bintray.com/kotlinx" }
+    maven { url 'https://jitpack.io' }
 }
 
 configurations {
@@ -56,7 +67,9 @@ dependencies {
     implementation 'me.leolin:ShortcutBadger:1.1.22@aar'
     implementation 'org.whispersystems:signal-protocol-java:2.6.2'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation "com.wefika:flowlayout:0.4.1"
+    implementation("com.wefika:flowlayout:0.4.1") {
+        exclude group: 'com.intellij', module: 'annotations'
+    }
     implementation 'net.ypresto.androidtranscoder:android-transcoder:0.3.0'
     implementation project(':libs:xmpp-addr')
     implementation 'org.osmdroid:osmdroid-android:6.0.3'
@@ -67,6 +80,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     quicksyImplementation 'io.michaelrocks:libphonenumber-android:8.10.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//    implementation "com.google.dagger:dagger-android:$dagger_version"
+//    implementation "com.google.dagger:dagger-android-support:$dagger_version"
+//    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation("com.github.yaneq6:aakit:$aakit_version") {
+        exclude group: 'com.intellij', module: 'annotations'
+    }
 }
 
 ext {
@@ -78,7 +98,7 @@ android {
     compileSdkVersion 28
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 22
         targetSdkVersion 28
         versionCode 323
         versionName "2.4.3"
