--- a/build.gradle
+++ b/build.gradle
@@ -264,9 +264,9 @@ dependencies {
     implementation "com.google.dagger:dagger-android:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-//    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-//    implementation("com.github.yaneq6:aakit:$aakit_version") {
-//        exclude group: 'com.intellij', module: 'annotations'
-//    }
+    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
+    implementation("com.github.yaneq6:aakit:$aakit_version") {
+        exclude group: 'com.intellij', module: 'annotations'
+    }
     implementation "com.jakewharton.timber:timber:$timber_version"
 }
