--- a/build.gradle
+++ b/build.gradle
@@ -273,4 +273,13 @@ dependencies {
         exclude group: 'com.intellij', module: 'annotations'
     }
     implementation "com.jakewharton.timber:timber:$timber_version"
+
+//    testImplementation 'com.github.cretz.kastree:kastree-ast-jvm:0.4.0'
+//    testImplementation 'com.github.cretz.kastree:kastree-ast-psi:0.4.0'
+    testImplementation files('/home/janek/projects/kastree/ast/ast-jvm/build/libs/ast-jvm-0.5.0-SNAPSHOT.jar')
+    testImplementation files('/home/janek/projects/kastree/ast-psi/build/libs/ast-psi-0.5.0-SNAPSHOT.jar')
+    testImplementation files('/home/janek/projects/kastree/ast/ast-jvm/build/libs/ast-jvm-0.5.0-SNAPSHOT-sources.jar')
+    testImplementation files('/home/janek/projects/kastree/ast-psi/build/libs/ast-psi-0.5.0-SNAPSHOT-sources.jar')
+    testImplementation "org.jetbrains.kotlin:kotlin-compiler-embeddable:$kotlin_version"
+    testImplementation "junit:junit:4.12"
 }
